# multi-cli-studio

./: .gitignore  LICENSE  NOTICE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release-desktop.yml
docs/: desktop-release.md  desktop-release.zh-CN.md  project-intro.zh-CN.md
packaging/fedora/: README.md  build-rpm.sh
scripts/: configure-release-feed.mjs  create-dmg.sh  materialize-tauri-signing-key.mjs  release-preflight.mjs  run-tauri.mjs  run-tauri.ps1  setup-desktop-release.mjs  sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  README.md  tauri.conf.json  tauri.conf.json.sig
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  automation.rs  local_usage.rs  main.rs  storage.rs
src-tauri/src/platform_accounts/: mod.rs
src/components/: AgentIcon.tsx  AgentStatusCard.tsx  AgentTabs.tsx  CodexOverviewTabsHeader.tsx  ConversationHistory.tsx  FileIcon.tsx  GeminiOverviewTabsHeader.tsx  GitTooltipButton.tsx  KiroOverviewTabsHeader.tsx  ModalErrorMessage.tsx  PaginationControls.tsx  ProjectSummary.tsx  PromptInput.tsx  QuickActions.tsx  RecentActivity.tsx  Sidebar.tsx  TerminalOutput.tsx
src/layouts/: AppLayout.tsx
src/lib/: acp.ts  agentIcons.ts  apiChatFormatting.ts  bridge.ts  browserRuntime.ts  chatAttachments.ts  compaction.ts  customAgents.ts  desktopNotifications.ts  messageFormatting.ts  modelProviders.ts  models.ts  seed.ts  store.ts  (+4 more)
(+104 files in other folders)
