[package]
name = "multi-cli-studio"
version = "1.0.0"
description = "Desktop orchestration shell for Codex, Claude, and Gemini CLIs."
authors = ["OpenAI Codex"]
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
lettre = { version = "0.11", features = ["builder", "native-tls"] }
cron = "0.12"
portable-pty = "0.8"
regex = "1"
trash = "5"
